<resources>
    <string name="app_name">Ekaai</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_temperature">TemperatureActivity</string>
    <string name="title_activity_length">LengthActivity</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>

    <string-array name="unit_options">
        <item>Length</item>
        <item>Temperature</item>
        <item>Time</item>
        <item>Volume</item>
        <item>Weight</item>
    </string-array>

    <string-array name="length_options">
        <item>Meter (m)</item>
        <item>Feet (ft)</item>
        <item>Mile (ml)</item>
        <item>Kilometre (km)</item>
        <item>Inch (in)</item>
        <item>Centimeter (cm)</item>
        <item>Yard (yd)</item>
        <item>Nautical Mile</item>
        <item>Micron (µ)</item>
        <item>Nanometers (nm)</item>
        <item>Millimeter (mm)</item>
    </string-array>

    <string-array name="temperature_options">
        <item>Celsius (C)</item>
        <item>Fahrenheit (F)</item>
        <item>Kelvin (K)</item>
    </string-array>

    <string-array name="weight_options">
        <item>Kilogram (kg)</item>
        <item>Pound (lb)</item>
        <item>Milligram (mg)</item>
        <item>Ounce (oz)</item>
        <item>Carat (metric)</item>
        <item>Grain (gr)</item>
        <item>Gram (g)</item>
        <item>Newton (Earth)</item>
        <item>Tonne (t)</item>
    </string-array>

    <string-array name="volume_options">
        <item>Barrel (petroleum)</item>
        <item>Gallon (fluid)</item>
        <item>Milliliter (ml)</item>
        <item>Cubic centimeter (cm&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt;)</item>
        <item>Cubic feet (ft&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt;)</item>
        <item>Cubic meter (m&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt;)</item>
        <item>Cubic yard (yd&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt;)</item>
    </string-array>

    <string-array name="time_options">
        <item>Second (s)</item>
        <item>Minute (min)</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Year</item>
        <item>Century</item>
        <item>Millisecond (ms)</item>
        <item>Millennium</item>
        <item>Microsecond</item>
        <item>Nanosecond</item>
    </string-array>

    <string name="swap_btn">Swap Button</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_string_1">1</string>
    <string name="drag_handle_desc">Drag Handle</string>
    <string name="unit_icons">unit icons</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="ekaai_unit_converter_app">Ekaai - Unit Converter App</string>
    <string name="header_background_image">header background image</string>
    <string name="header_image">header image</string>
    <string name="alert_bullet">• </string>
    <string name="ekaai_gives_user_a_clean_and_simple_way_to_convert_units_easily">Ekaai gives user a clean and simple way to convert between units.</string>
    <string name="scroll_left_or_right_to_convert_from_one_unit_to_another">Scroll left or right to convert from one unit to another.</string>
    <string name="swap_between_current_units_using_the_swap_button_in_the_middle_of_the_screen">Swap between current units using the swap button in the middle of the screen.</string>
    <string name="choose_between_various_conversion_system_by_clicking_on_the_hamburger_menu">Choose between various conversion system by clicking on the Hamburger Menu.</string>
    <string name="swipe_right_to_view_the_list_of_units_available_for_a_conversion_system">Swipe right to view the list of units available for a conversion system.</string>
    <string name="reorder_those_units_as_per_your_preference_by_dragging_and_dropping">Reorder those units as per your preference by dragging and dropping.</string>
    <string name="rate_us">Rate Us</string>
    <string name="later">Later</string>
    <string name="lft_website">http://lftechnology.com/</string>
    <string name="lft_playstore_link">market://details?id=com.lftechnology.ekaai</string>
    <string name="open_source_packages_used">Open Source packages used:</string>
    <string name="https_jakewharton_github_io_butterknife">https://jakewharton.github.io/butterknife/</string>
    <string name="https_github_com_bumptech_glide">https://github.com/bumptech/glide</string>
    <string name="https_square_github_io_otto">https://square.github.io/otto/</string>
    <string name="https_github_com_jakewharton_timber">https://github.com/JakeWharton/timber</string>
    <string name="get_started">GET STARTED</string>
    <string name="a_simple_and_easy_to_use_unit_converter">A simple and easy-to-use unit converter to handle any conversion you\'ll ever need.</string>
    <string name="https_github_com_inkapplications_android_viewpagerindicator">https://github.com/InkApplications/Android-ViewPagerIndicator</string>
    <string name="our_repo">Our Repo:</string>
    <string name="https_github_com_grishmashrestha_ekaai">https://github.com/grishmashrestha/ekaai</string>
</resources>
